# CASL-HJX

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CASLCommonLibrary/: CaslArray2D.cpp  CaslArray2D.h  CaslCppToMATLAB2D.cpp  CaslCppToMATLAB2D.h  CaslGrid2D.h  CaslHamiltonJacobi.cpp  CaslHamiltonJacobi.h  CaslHamiltonJacobi2D.cpp  CaslHamiltonJacobi2D.h  CaslHamiltonian2D.cpp  CaslHamiltonian2D.h  CaslOptions.h  CaslRK4.cpp  CaslRK4.h  CaslSecondOrderDerivative2D_1D.cpp  CaslSecondOrderDerivative2D_1D.h  DPMatrix2D.cpp  DPMatrix2D.h
CASLPost-Processing/: visualizeNormalAdvection.asv  visualizeNormalAdvection.m
CASLProjects/projectAdvection/: CMakeLists.txt  main.cpp
CASLProjects/projectAdvection/projectAdvection_lib/: CaslHamiltonianAdvection2D.cpp  CaslHamiltonianAdvection2D.h
CASLProjects/projectAdvectionDiffusion/: CMakeLists.txt  _main.cpp  main.cpp
CASLProjects/projectAdvectionDiffusion/projectAdvectionDiffusion_lib/: CaslHamiltonianDiffusion2D.cpp
CASLProjects/projectBurgers/: CMakeLists.txt  main.cpp
CASLProjects/projectBurgers/projectBurgers_lib/: CaslHamiltonianBurgers2D.cpp  CaslHamiltonianBurgers2D.h
CASLProjects/projectDeterministicHH2D/: CMakeLists.txt  main.cpp
CASLProjects/projectDeterministicHH2D/projectDeterministicHH2D_lib/: CaslHHSingleNeuronModel.cpp  CaslHHSingleNeuronModel.h  CaslHHWholeSystemModel.cpp  CaslHHWholeSystemModel.h  CaslHamiltonianHHModel.cpp  CaslHamiltonianHHModel.h
CASLProjects/projectDiffusion/: CMakeLists.txt  main.cpp
CASLProjects/projectDiffusion/projectDiffusion_lib/: CaslHamiltonianDiffusion2D.cpp  CaslHamiltonianDiffusion2D.h
CASLProjects/projectLQR2D/: CMakeLists.txt  K_sol_2_2D.mat  all_times_compare.fig  convergence_LQR2D.m  main.cpp  phi0(EndCost)_LQR2D.txt  simulation_info.txt  test_final.asv  test_final.m  visulization.asv  visulization.m
CASLProjects/projectLQR2D/projectLQR2D_lib/: CaslHamiltonianLQR2D.cpp  CaslHamiltonianLQR2D.h  CaslLQRSystemDynamics.cpp  CaslLQRSystemDynamics.h  RiccatiSolver.h
CASLProjects/projectLaplacian2D_1D/: CMakeLists.txt  main.cpp
CASLProjects/projectLaplacian2D_1D/projectLaplacian2D_1D_lib/: CaslHamiltonianDiffusion2D.cpp  CaslInitialProfiles2D.cpp  CaslInitialProfiles2D.h
CASLProjects/projectNormalAdvection/: CMakeLists.txt  main.cpp
CASLProjects/projectNormalAdvection/PostProcessing/: analysis_data.csv  levelset_analysis.fig
CASLProjects/projectNormalAdvection/projectNormalAdvection_lib/: CaslHamiltonianNormalAdvection2D.cpp  CaslHamiltonianNormalAdvection2D.h
CASLProjects/projectReinitialization/: CMakeLists.txt  main.cpp
CASLProjects/projectReinitialization/projectReinitialization_lib/: CaslHamiltonianReinitialization2D.cpp  CaslHamiltonianReinitialization2D.h
CASLProjects/projectStochasticHH2D/: CMakeLists.txt  main.cpp
CASLProjects/projectStochasticHH2D/projectStochasticHH2D_lib/: CaslHHNeuronModel.cpp  CaslHHNeuronModel.h  CaslHamiltonianHHModel.cpp  CaslHamiltonianHHModel.h
scripts/: create_github_gifs.m
